Add CardCollection class and special methods to CardView to make it easier to track changes to collections and make it possible to prevent changes outside Card class Add delayed initialization of certain collection fields to Card to reduce memory usage and improve performance